--- a/calFatura/styles/styles_index.css
+++ b/calFatura/styles/styles_index.css
@@ -1,8 +1,8 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
     margin: 0;
     padding: 0;
+    background: linear-gradient(to bottom right, #1c1c2b, #293149);
 }
 
 #container {
